--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AlbertSavesThePlanets2UDPReceiverAndSignalRSender"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="150" Width="350">
     <Grid>
-        
+        <Button x:Name="Start" FontSize="12" FontWeight="Bold" Content="Initialize Joachim The Arduino King" Click="Loop"  HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" Width="225" Height="50"/>
     </Grid>
 </Window>
